task-1/terraform-ecs/alb.tf
# Security Group for ALB
resource "aws_security_group" "alb_sg" {
  name        = "abhiram-ecs-alb-sg"
  description = "Allow inbound HTTP traffic"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Application Load Balancer
resource "aws_lb" "app_alb" {
  name               = "abhiram-strapi-ecs-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [data.aws_subnets.default.ids[0], data.aws_subnets.default.ids[1], data.aws_subnets.default.ids[2]]
  security_groups    = [aws_security_group.alb_sg.id]
}

# Target group
resource "aws_lb_target_group" "strapi_tg" {
  name        = "abhiram-ecs-alb-tg"
  port        = 1337
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.default.id
  target_type = "ip"
  health_check {
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
  }
}

# Listener for ALB
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.strapi_tg.arn
  }
}
